test/errors/const1.ls

#OUTPUT
#Syntax Error: Expected data type.
# -> [10] const const1 = 20
#
#END

#RET 0

const const1 = 20

extern func printf(s:str, ...)

func main -> int
    return 0
end
